4598.	[func]		Update fuzzing code to (1) reply to a DNSKEY
			query from named with appropriate DNSKEY used in
			fuzzing; (2) patch the QTYPE correctly in
			resolver fuzzing; (3) comment things so the rest
			of us are able to understand how fuzzing is
			implemented in named; (4) Coding style changes,
			cleanup, etc. [RT #44787]

4597.	[bug]		The validator now ignores SHA-1 DS digest type
			when a DS record with SHA-384 digest type is
			present and is a supported digest type.
			[RT #45017]

4596.	[bug]		Validate glue before adding it to the additional
			section. This also fixes incorrect TTL capping
			when the RRSIG expired earlier than the TTL.
			[RT #45062]

4595.	[func]		dnssec-keygen will no longer generate RSA keys
			less than 1024 bits in length. dnssec-keymgr
			was similarly updated. [RT #36895]

4594.	[func]		"dnstap-read -x" prints a hex dump of the wire
			format of each logged DNS message. [RT #44816]

4593.	[doc]		Update README using markdown, remove outdated FAQ
			file in favor of the knowledge base.

4592.	[bug]		A race condition on shutdown could trigger an
			assertion failure in dispatch.c. [RT #43822]

4591.	[port]		Addressed some python 3 compatibility issues.
			Thanks to Ville Skytta. [RT #44955] [RT #44956]

4590.	[bug]		Support for PTHREAD_MUTEX_ADAPTIVE_NP was not being
			properly detected. [RT #44871]

4589.	[cleanup]	"configure -q" is now silent. [RT #44829]

4588.	[bug]		nsupdate could send queries for TKEY to the wrong
			server when using GSSAPI. Thanks to Tomas Hozza.
			[RT #39893]

4587.	[bug]		named-checkzone failed to handle occulted data below
			DNAMEs correctly. [RT #44877]

4586.	[func]		dig, host and nslookup now use TCP for ANY queries.
			[RT #44687]

4585.	[port]		win32: Set CompileAS value. [RT #42474]

4584.	[bug]		A number of memory usage statistics were not properly
			reported when they exceeded 4G.  [RT #44750]

4583.	[func]		"host -A" returns most records for a name but